--- a/Java Script/Java Script Basic/aula21 exercicio IMC/assets/css/style.css
+++ b/Java Script/Java Script Basic/aula21 exercicio IMC/assets/css/style.css
@@ -68,8 +68,14 @@ form button:hover {
     
 }
 
-.resultado {
+.rigth {
     
-    background-color: aquamarine;
+    background-color: rgb(12, 199, 137);
+    padding: 5px;
     
+}
+
+.errado{
+    background-color: red;
+    padding: 5px;
 }
